@@ -1,3 +1,6 @@
+DATE: 09-03-2005 17:33
+[gdiez] Stopping and starting the database before the index creation (just after the database is created and the user granted)
+
 DATE: 09-03-2005 23:05
 [dimeglio] Moved creation of indices inside database creation (if database
 		   exists indices are not recreated)
